Fix: fix some erros